fix: Update logo link in Topbar component and add horizontal overflow to details content for mobile view

--- a/app/dashboard/users/[id]/UserDetails.module.scss
+++ b/app/dashboard/users/[id]/UserDetails.module.scss
@@ -184,6 +184,7 @@
       display: flex;
       justify-content: space-between;
       gap: 40px;
+      overflow-x: auto;
 
       span {
         padding: 0 30px 10px 30px;
